examples/test/testpolicy6023.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6023
  namespace: namespace0
spec:
  podSelector:
    matchLabels:
      key0: value27
      key22: value14
      key44: value43
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key33: value31
      podSelector:
        matchLabels:
          key29: value26
          key4: value47
          key37: value41
